--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
+    "@chakra-ui/react": "^3.2.3",
+    "@emotion/react": "^11.13.5",
     "@stripe/stripe-js": "^1.54.0",
     "@testing-library/react": "^14.0.0",
     "graphql": "^16.6.0",
     "happy-dom": "^9.20.3",
     "jwt-decode": "^3.1.2",
+    "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.11.2",
     "vitest": "^0.31.4"
   },
@@ -30,6 +34,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-jsconfig-paths": "^2.0.1"
   }
 }
