--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "kill-port": "^2.0.1",
-    "dotenv": "^8.2.0"
+    "nes.css": "^2.2.1"
   }
 }
