--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.11.2",
+    "react-use": "^17.6.0",
     "vitest": "^0.31.4"
   },
   "devDependencies": {
